fixed card top size on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -125,11 +125,6 @@ a:visited {
 .card-title {
   font-size: 0.8rem;
 }
-.card-img-top {
-  width: 100%;
-  height: 15vw;
-  object-fit: cover;
-}
 .card {
   margin: 0 0.5em;
   box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
